--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 	<link href="favicon.ico" rel="icon" type="image/x-icon" />
 	
 	<link rel="stylesheet" href="css/normalize.css" />
-	<link rel="stylesheet" href="css/960.css" />	
+	<link rel="stylesheet" href="css/960.css" />
+    <link href='http://fonts.googleapis.com/css?family=Coda+Caption:800' rel='stylesheet' type='text/css'>	
 	<link rel="stylesheet" href="css/styles.css" />
 	
 </head>
@@ -40,7 +41,7 @@
 
 <aside>	
 	<blockquote>
-		"Don't fight the browser. Work with it." - P. Colin Manikoth
+		"Don't fight the browser &amp; Work with it." - P. Colin Manikoth
 	</blockquote>
 </aside>
 
